TNS-23: Setting the background position to fixed for larger browser windows and for smaller widths back to scrolled but with 100% width. All this to help avoid some instances (not all) of white space beneath the photo.

--- a/docroot/sites/all/themes/tns/assets/_scss/page/_tour.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/page/_tour.scss
@@ -13,9 +13,10 @@
       position: center top;
       repeat: no-repeat;
       size: 100% auto;
+      attachment: fixed;
     }
   }
-  
+    
   .tour-dates {
     font-size: 16px;
     
